@@ -33,6 +33,7 @@
 - Fix: [#20628] Moving caret using Ctrl+left can move too far when using a multibyte grapheme.
 - Fix: [#20631] IME window not positioned correctly.
 - Fix: [#20845] Trying to save under a folder with no write permissions causes a crash.
+- Fix: [#21039] Text rendering bleeds pixels through windows.
 - Fix: [#21054] “No entrance” style is selected by default in the track designer.
 - Fix: [#21145] [Plugin] setInterval/setTimeout handle conflict.
 - Fix: [#21157] [Plugin] Widgets do not redraw correctly when updating disabled or visibility state. 
